[package]
name = "OBY-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bincode = "1.3.3"
colored = "3.0.0"
env_logger = "0.11.6"
log = "0.4.25"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sled = "0.34.7"
sscanf = "0.4.2"
strum = { version = "0.26.3", features = ["derive"] }
