[package]
name = "OBY-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bincode = "1.3.3"
colored = "3.0.0"
env_logger = "0.11.6"
httparse = "1.9.5"
hyper = "1.5.2"
if-addrs = "0.13.3"
log = "0.4.25"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sled = "0.34.7"
sscanf = "0.4.2"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full", "tokio-macros"] }
tokio-macros = { version = "0.2.0-alpha.6" }
urlencoding = "2.1.3"
